Almost finished navbar
Planning to add a drop down menu in the future

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,19 +4,26 @@
 
 
 body{
-  background-color: #eaf1f5;
+  background-color: #e6e3e9;
 }
 h1{
   font-size:x-large;
   font-weight: 500;
 }
 #component{
+ 
  box-shadow: 10px;
  background-color: white;
  padding: 30px;
  border-radius: 50px;
  box-shadow: 6px 6px 6px 6px rgba(57, 68, 219, 0.1);
 }
+@media (max-width: 640px) { 
+  #component {
+    padding: 10px; /* Bunu ekran küçüldüğünde iconlar gittiği için diyorum*/
+  }
+}
+
 
 
 
