--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,9 @@ h1{
   font-size:x-large;
   font-weight: 500;
 }
+h2,p{
+  font-size: large;
+}
 #component{
  
  box-shadow: 10px;
@@ -17,6 +20,7 @@ h1{
  padding: 30px;
  border-radius: 50px;
  box-shadow: 6px 6px 6px 6px rgba(57, 68, 219, 0.1);
+ margin: 30px;
 }
 @media (max-width: 640px) { 
   #component {
