--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,15 @@ h2,p{
   }
 }
 
+.dropdown {
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+.dropdown.open {
+  opacity: 1;
+  overflow: auto;
+}
+
 
 
 
