--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,6 @@ h2,p{
   font-size: large;
 }
 #component{
- 
  box-shadow: 10px;
  background-color: white;
  padding: 30px;
@@ -22,13 +21,17 @@ h2,p{
  box-shadow: 6px 6px 6px 6px rgba(57, 68, 219, 0.1);
  margin: 30px;
 }
+#component.special{
+  background-color: rgb(220, 206, 243);
+}
 
 @media (max-width: 640px) { 
   #component {
-    padding: 10px; /* Bunu ekran küçüldüğünde iconlar gittiği için diyorum*/
+    padding: 10px; 
   }
 }
 
+/*Biraz hareket gelsin diye*/
 .dropdown {
   opacity: 0;
   transition: all 0.3s ease-in-out;
@@ -37,36 +40,8 @@ h2,p{
   opacity: 1;
   overflow: auto;
 }
-
-
-
-
-/*:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/*dropdown açık değilken tuşlayamamak için*/
+.dropdown:not(.open) * {
+  pointer-events: none;
+  cursor: default;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}*/
